--- a/package.json
+++ b/package.json
@@ -4,7 +4,21 @@
   "author": {
     "name": "Enoch Ndika"
   },
-  "licence":"MIT",
+  "licence": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/salvia-kit/dashboard-v7-vue.git"
+  },
+  "keywords": [
+    "ui",
+    "vue",
+    "vue3",
+    "components",
+    "dashboard",
+    "admin",
+    "tailwindcss",
+    "layout"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
